tests/functional/lang/eval-fail/dynamic-attrs-let.err.exp
error: dynamic attributes not allowed in let
       at /pwd/lang/eval-fail/dynamic-attrs-let.nix:1:1:
            1| let
             | ^
            2|   ${"a" + ""} = 1;
